# Meta-PyTorch-OpenEnv-Hackathon

./: Dockerfile  README.md  check.sh  inference.py  openenv.yaml  pyproject.toml  requirements.txt
api/: app.py  schemas.py
baseline/: prompting.py  run_baseline.py
env/: __init__.py  delivery_assignment.py
grader/: __init__.py  deterministic_grader.py
models/: __init__.py  action.py  common.py  observation.py  reward.py  state.py  task.py
server/: __init__.py  app.py
tasks/: __init__.py  catalog.py
tests/: test_env.py
