[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delivery-worker-assignment-openenv"
version = "0.1.0"
description = "Production-grade OpenEnv logistics environment for delivery worker assignment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "openai>=2.7.2,<3.0.0",
  "openenv-core[core]>=0.2.2",
  "pydantic>=2.10.0,<3.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "requests>=2.32.0,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["api*", "baseline*", "env*", "grader*", "models*", "server*", "tasks*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
